chore: add example with node

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "node-playground",
   "version": "1.0.0",
   "scripts": {
-    "print": "ts-node ./src/script.tsx"
+    "build": "tsc",
+    "print": "ts-node ./src/script.tsx",
+    "print-with-node": "node ./dist/src/script.js"
   },
   "devDependencies": {
     "@types/react": "18.2.37",
