--- a/package.json
+++ b/package.json
@@ -3,17 +3,27 @@
   "version": "1.0.0",
   "scripts": {
     "build": "tsc",
+    "build-email": "email build",
     "print": "ts-node ./src/script.tsx",
-    "print-with-node": "node ./dist/src/script.js"
+    "print-with-node": "node ./dist/src/script.js",
+    "test": "jest"
   },
   "devDependencies": {
+    "@jsx-email/cli": "3.0.1",
+    "@types/jest": "29.5.8",
     "@types/react": "18.2.37",
+    "jest": "29.7.0",
     "prettier": "3.1.0",
+    "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
     "typescript": "5.2.2"
   },
   "dependencies": {
-    "@jsx-email/all": "3.0.1",
+    "@jsx-email/body": "latest",
+    "@jsx-email/container": "latest",
+    "@jsx-email/head": "latest",
+    "@jsx-email/html": "latest",
+    "@jsx-email/render": "3.0.1",
     "react": "18.2.0"
   }
 }
