--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "preview-prod": "ts-node ./src/build.ts && vite ./node_modules/@jsx-email/cli/dist/app/dist"
   },
   "devDependencies": {
-    "@jsx-email/cli": "3.0.1",
     "@types/jest": "29.5.8",
     "@types/react": "18.2.37",
     "jest": "29.7.0",
@@ -20,11 +19,7 @@
     "typescript": "5.2.2"
   },
   "dependencies": {
-    "@jsx-email/body": "latest",
-    "@jsx-email/container": "latest",
-    "@jsx-email/head": "latest",
-    "@jsx-email/html": "latest",
-    "@jsx-email/render": "3.0.1",
+    "jsx-email": "1.1.1",
     "react": "18.2.0"
   }
 }
